# Peppa

./: .gitignore  Cargo.toml  Justfile  README.md  build.rs
.github/workflows/: build.yml  release.yml
res/: text.f.glsl  text.v.glsl
src/: font.rs  gui.rs  main.rs  shader.rs
