[package]
name = "peppa"
version = "0.1.0"
authors = ["dzp <danzipao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossfont = "*"
glutin = "*"
log = "*"
pretty_env_logger = "*"
image = "*"

[build-dependencies]
gl_generator = "0.14"
rustc_tools_util = "*"

[target."cfg(target_os = \"macos\")".dependencies.core-text]
version = "15"
