[package]
name = "peppa"
version = "0.1.0"
authors = ["dzp <danzipao@gmail.com>"]
description = "Peppa is a GPU enhanced terminal emulator. It can also be used to play MUD, act as a SSH client, connect to BBS, etc."
repository = "https://github.com/xterm-peppa/Peppa"
readme = "README.md"
license = "GPLv3"
keywords = ["terminal", "emulator", "mud"]
categories = ["X11"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossfont = "0.1"
glutin = "0.24"
log = "0.4"
pretty_env_logger = "0.4"

[build-dependencies]
gl_generator = "*"
rustc_tools_util = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.7", features = ["impl-default", "wincon"]}
